Bug 460934 - Executing KWin.PlacementArea script leads to frozen window content
Summary: Executing KWin.PlacementArea script leads to frozen window content
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: scripts (other bugs)
Version First Reported In: 5.26.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-10-24 11:04 UTC by shops
Modified: 2023-02-02 10:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description shops 2022-10-24 11:04:06 UTC
SUMMARY
I use the KWin script https://github.com/mpartel/kwin-thirds/ to have windows on thirds of the (ultra widescreen) monitor. This worked fine for some time now. Since (most likely) the 5.26 Plasma update, it very often happens, that after using the thirds script, the window contend is not rendered anymore until the window is resized.


STEPS TO REPRODUCE
1. Install the KWin script https://github.com/mpartel/kwin-thirds/
2. Have a full screen window (e.g. Kate)
3. Make it fullscreen
4. Press META+RIGHT ARROW

OBSERVED RESULT
The application get replaced to the right place, but is blurry and, beside the window decoration, the content is not rendered. This remains until the Window is resized. It seems, that the content is still controllable, however.

EXPECTED RESULT
The application get replaced to the right place, and is usable and correctly displayed.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbelweed 20221022 
(available in About System)
KDE Plasma Version:  5.26.1
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6

ADDITIONAL INFORMATION
Kernel 6.0.2-1
NVIDIA GeForce GTX 1070, Version: NVIDIA-SMI 470.141.03   Driver Version: 470.141.03   CUDA Version: 11.4
Comment 1 shops 2022-10-26 19:58:52 UTC
When deactivation the compositor (ALT + SHIFT + F12), the behavior is as it should be. No Issues after moving the windows around with the script.
Comment 2 Vlad Zahorodnii 2023-02-02 10:16:14 UTC
Git commit abd59be23274a0c76709a8c587d9ed14d154d995 by Vlad Zahorodnii, on behalf of Xaver Hugl.
Committed on 02/02/2023 at 09:14.
Pushed by vladz into branch 'master'.

x11window: round framegeometry on moveresize

If this isn't done, the size check in SurfacePixmapX11::create will stop
the window from being updated
Related: bug 458778

M  +1    -1    src/x11window.cpp

https://invent.kde.org/plasma/kwin/commit/abd59be23274a0c76709a8c587d9ed14d154d995
Comment 3 Vlad Zahorodnii 2023-02-02 10:32:07 UTC
Git commit e8d5f1e62de979f35c37cf5cd05dc049555a0673 by Vlad Zahorodnii, on behalf of Xaver Hugl.
Committed on 02/02/2023 at 10:17.
Pushed by vladz into branch 'Plasma/5.27'.

x11window: round framegeometry on moveresize

If this isn't done, the size check in SurfacePixmapX11::create will stop
the window from being updated
Related: bug 458778
(cherry picked from commit abd59be23274a0c76709a8c587d9ed14d154d995)

M  +1    -1    src/x11window.cpp

https://invent.kde.org/plasma/kwin/commit/e8d5f1e62de979f35c37cf5cd05dc049555a0673