x11window: round framegeometry on moveresize

If this isn't done, the size check in SurfacePixmapX11::create will stop
the window from being updated

BUG: 460934
BUG: 458778